# PulseQ

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/projects/: pulseq.yml
diagrams/: architecture-diagram.md  consumer-handler-diagram.md  dead-letter-queue-diagram.md  networking-layer-diagram.md  queue-service-diagram.md  storage-layer-diagram.md
docs/: architecture.md  branch-naming-guide.md
include/pulseq/networking/: server.hpp
include/pulseq/queue/: queue_manager.hpp
scripts/: build.sh
src/: main.cpp
test/: CMakeLists.txt
test/unit/: test_queue.cpp
